# napi-eventemitter-rust

./: .gitignore  Cargo.toml  README.md  example.js  index.d.ts  package.json
src/: lib.rs
