[package]
edition = "2021"
name = "emitter-usage"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.136", features = ["serde_derive"] }
reqwest = { version = "0.11.9", features = ["stream"] }
futures-util = "0.3.21"
napi = { version = "2.1.0", default-features = false, features = ["napi8", "serde-json", "tokio_rt"] }
napi-derive = "2.1.0"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
